# xd-audiobook

design-reference/: colors_and_type.css
design-reference/pages/: audio-player.html  bookshelf.html  library.html  reader.html  settings.html
entry/: build-profile.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt
entry/src/main/cpp/qwentts/: qwentts_napi.cpp  qwentts_napi.h
entry/src/main/ets/common/constants/: AppConstants.ets  ReaderConstants.ets
entry/src/main/ets/common/model/: BookInfo.ets  BookProgress.ets  Bookmark.ets  ReaderSettings.ets  (+1 more)
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: AudioPlayerPage.ets  BookshelfPage.ets  Index.ets  LibraryPage.ets  ReaderPage.ets  SettingsPage.ets
entry/src/main/ets/service/: BookDatabase.ets  BookParseService.ets  BookParser.ets  CoverService.ets  EpubParser.ets  FileImportService.ets  ITtsEngine.ets  MobiParser.ets  PreferencesService.ets  QwenTtsEngine.ets  SpeechKitTtsEngine.ets  TtsService.ets  TxtParser.ets
tools/qwen3-tts-c-validation/: .gitignore  README.md  README_HARMONYOS.md  build.sh  build_harmonyos.ps1  build_harmonyos.sh  download_model.sh  run_inference.sh  run_inference_int4.sh  run_inference_int8.sh  run_server.sh  setup_env.sh
tools/qwen3-tts-validation/: .gitignore  README.md  download_model.py  export_onnx.py  export_onnx_wsl.sh  requirements-cpu.txt  requirements-gpu.txt  requirements.txt  run_all.ps1  run_all_linux.sh  run_all_venv.ps1  setup_env.ps1  setup_env_linux.sh  setup_env_venv.ps1  setup_env_wsl_trt.sh  test_inference.py
(+6 files in other folders)
